--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ### Site Settings ###
-title               : Horizon
+title               : K.N Anantha nandanan
 description         : >-
                       I don't work hard, I work smart. <br> <br> Backend Developer/Networking and Analysis <br> <a href = "https://www.amrita.edu/"> Student at Amrita Vishwa Vidyapeetham</a> <br>  <a href="https://amfoss.in/" title = "amFOSS"> Member at amFOSS</a> <br>
 baseurl             : ""                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
