project navft added

--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,4 +1,17 @@
+
+- title: Member, Google Developer Student Club
+  from: 2020
+  to: Ongoing
+  description: Developer Student Club is the university-based community groups for students interested in Google developer technologies.
+
+
+- title: Member and Mentor, amFOSS
+  from: 2019
+  to: Ongoing
+  description: FOSS@Amrita (also known as amFOSS) is a student community-based in Amrita Vishwa Vidyapeetham.
+
 - title: Student, Amrita Vishwa Vidyapeetham
   from: 2019
   to: 2023
   description: Pursuing B-tech in CSE
+
