--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ author:
   linkedin          : de-blank
 #  medium            : your_username
 # soundcloud        : your_username
-#spotify           : Ananthan2k
+  spotify           : Ananthan2k
 # stackoverflow     : your_user_id
 # tumblr            : your_username.tumblr.com
 # twitch            : your_username
